# restapi/internal/api/v1/docs/swagger.json
@@ -285,119 +285,6 @@
                 }
             }
         },
-        "/correctiveTasks": {
-            "get": {
-                "description": "List all correctiveTasks",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "List correctiveTasks",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/types.CorrectiveTask"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a correctiveTask",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create a correctiveTask",
-                "parameters": [
-                    {
-                        "description": "CorrectiveTask object",
-                        "name": "correctiveTask",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.CorrectiveTask"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/types.CorrectiveTask"
-                        }
-                    }
-                }
-            }
-        },
-        "/correctiveTasks/{correctiveTaskTitle}": {
-            "get": {
-                "description": "Get a correctiveTask",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get a correctiveTask",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CorrectiveTask Title",
-                        "name": "correctiveTaskTitle",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/types.CorrectiveTask"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update a correctiveTask",
-                "consumes": [
-                    "application/json"
-                ],
-                "summary": "Update a correctiveTask",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CorrectiveTask Title",
-                        "name": "correctiveTaskTitle",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
-            "delete": {
-                "description": "Delete a correctiveTask",
-                "summary": "Delete a correctiveTask",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "CorrectiveTask Title",
-                        "name": "correctiveTaskTitle",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
         "/groups": {
             "get": {
                 "description": "List all groups",
@@ -734,42 +621,42 @@
                 }
             }
         },
-        "/preventativeTasks": {
+        "/tasks": {
             "get": {
-                "description": "List all preventativeTasks",
+                "description": "List all tasks",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "List preventativeTasks",
+                "summary": "List tasks",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/types.PreventativeTask"
+                                "$ref": "#/definitions/types.Task"
                             }
                         }
                     }
                 }
             },
             "post": {
-                "description": "Create a preventativeTask",
+                "description": "Create a task",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create a preventativeTask",
+                "summary": "Create a task",
                 "parameters": [
                     {
-                        "description": "PreventativeTask object",
-                        "name": "preventativeTask",
+                        "description": "Task object",
+                        "name": "task",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.PreventativeTask"
+                            "$ref": "#/definitions/types.Task"
                         }
                     }
                 ],
@@ -777,24 +664,24 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/types.PreventativeTask"
+                            "$ref": "#/definitions/types.Task"
                         }
                     }
                 }
             }
         },
-        "/preventativeTasks/{preventativeTaskTitle}": {
+        "/tasks/{taskTitle}": {
             "get": {
-                "description": "Get a preventativeTask",
+                "description": "Get a task",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a preventativeTask",
+                "summary": "Get a task",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "PreventativeTask Title",
-                        "name": "preventativeTaskTitle",
+                        "description": "Task Title",
+                        "name": "taskTitle",
                         "in": "path",
                         "required": true
                     }
@@ -803,35 +690,35 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.PreventativeTask"
+                            "$ref": "#/definitions/types.Task"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update a preventativeTask",
+                "description": "Update a task",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update a preventativeTask",
+                "summary": "Update a task",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "PreventativeTask Title",
-                        "name": "preventativeTaskTitle",
+                        "description": "Task Title",
+                        "name": "taskTitle",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "PreventativeTask object",
-                        "name": "preventativeTask",
+                        "description": "Task object",
+                        "name": "task",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.PreventativeTask"
+                            "$ref": "#/definitions/types.Task"
                         }
                     }
                 ],
@@ -842,13 +729,13 @@
                 }
             },
             "delete": {
-                "description": "Delete a preventativeTask",
-                "summary": "Delete a preventativeTask",
+                "description": "Delete a task",
+                "summary": "Delete a task",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "PreventativeTask Title",
-                        "name": "preventativeTaskTitle",
+                        "description": "Task Title",
+                        "name": "taskTitle",
                         "in": "path",
                         "required": true
                     }
@@ -1362,6 +1249,9 @@
                 "taskId": {
                     "type": "string"
                 },
+                "title": {
+                    "type": "string"
+                },
                 "uniqueInstructions": {
                     "type": "string"
                 }
@@ -1392,20 +1282,6 @@
                 }
             }
         },
-        "types.CorrectiveTask": {
-            "type": "object",
-            "required": [
-                "title"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
         "types.Group": {
             "type": "object",
             "required": [
@@ -1417,7 +1293,7 @@
                 }
             }
         },
-        "types.PreventativeTask": {
+        "types.Task": {
             "type": "object",
             "required": [
                 "title"
@@ -1428,6 +1304,9 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         },
