# restapi/internal/types/corrective_task.go
@@ -1,7 +1,0 @@
-package types
-
-type CorrectiveTask struct {
-	Title       string `json:"title" binding:"required"`
-	Id          UUID   `json:"id" swaggerignore:"true"`
-	Description string `json:"description"`
-}
