# restapi/internal/types/task.go
@@ -1,7 +1,15 @@
 package types
 
-type PreventativeTask struct {
+type Task struct {
 	Title       string `json:"title" binding:"required"`
 	Id          UUID   `json:"id" swaggerignore:"true"`
 	Description string `json:"description"`
+	Type        int    `json:"type"`
 }
+
+// TaskType Enum
+const (
+	_ = iota
+	TaskTypePreventative
+	TaskTypeCorrective
+)
